api-manager-publisher/specs/prerequisites/manifests/00-namespace-gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
  labels:
    kubernetes.io/metadata.name: gateways
