api-manager-publisher/specs/prerequisites/manifests/20-ingress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: s2s-ingress
  namespace: gateways
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/load-balancer-source-ranges: __ALLOWED_SOURCE_CIDRS__
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: s2s-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
